Diet part changes

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -227,18 +227,19 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Large and Medium Sized Animals</h4>
-                        <!-- <p class="text-muted">Lead Designer</p> -->
-                    </div>
-                </div>
+                
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
                         <h4>One Time a Day</h4>
                         <!-- <p class="text-muted">Lead Marketer</p> -->
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Large and Medium Sized Animals</h4>
+                        <!-- <p class="text-muted">Lead Designer</p> -->
                     </div>
                 </div>
                 <div class="col-sm-4">
