--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li>
+<!--                     <li>
                         <a class="page-scroll" href="#services">Why?</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a class="page-scroll" href="#portfolio">Gallery</a>
                     </li>
@@ -95,12 +95,12 @@
     </header>
 
     <!-- Services Section -->
-    <section id="services">
+<!--     <section id="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Why this site?</h2>
-                    <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
+                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -114,7 +114,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Portfolio Grid Section -->
     <section id="portfolio" class="bg-light-gray">
