--- a/index.html
+++ b/index.html
@@ -546,10 +546,10 @@
 
                     </div>
                     <div class="col-sm-12 col-md-3">
-                    <img src="img/culture/1.jpg">
+                    <img src="img/culture/1.jpg" class="img-responsive img-rounded" >
                     </div>
                      <div class="col-sm-12 col-md-3">
-                     <img src="img/culture/2.jpg">
+                     <img src="img/culture/2.jpg" class="img-responsive img-rounded" >
                      </div>
                     <div class="col-sm-12 col-md-9">
                                         <strong>In myth and legend</strong>
@@ -573,7 +573,7 @@ In William Blake's poem in the Songs of Experience, titled "The Tyger," the tige
 </p>
 </div>
 <div class="col-sm-12 col-md-3">
-                <img src="img/culture/3.jpg">
+                <img src="img/culture/3.jpg" class="img-responsive img-rounded" >
                 </div>
 
             </div>
@@ -590,7 +590,7 @@ In William Blake's poem in the Songs of Experience, titled "The Tyger," the tige
             <div class="row">
                 <div class="col-sm-12">
                 <div class="text-center">
-                <img src="img/tiger-05.jpg">
+                <img src="img/tiger-05.jpg" class="img-responsive img-rounded" style="margin: 0 auto;">
                 </div>
                 <p>
                 <ol>
