--- a/index.html
+++ b/index.html
@@ -214,7 +214,13 @@
                     </div>
                 </div>
                 <div class="text-center">
-                <a href="#" class="btn btn-xl"><i class="fa fa-plus-circle" aria-hidden="true"></i>&nbsp;Submit Image</a>
+                <!-- <a href="#" class="btn btn-xl"><i class="fa fa-plus-circle" aria-hidden="true"></i>&nbsp;Submit Image</a> -->
+                <div class="fileupload fileupload-new" data-provides="fileupload">
+    <span class="btn btn-xl btn-file"><span class="fileupload-new"><i class="fa fa-plus-circle" aria-hidden="true"></i>&nbsp;Submit Image</span>
+    <span class="fileupload-exists">Change</span>         <input type="file" /></span>
+    <span class="fileupload-preview"></span>
+    <a href="#" class="close fileupload-exists" data-dismiss="fileupload" style="float: none">×</a>
+  </div>
                 </div>
             </div>
         </div>
