--- a/index.html
+++ b/index.html
@@ -426,24 +426,23 @@
                 </div>
             </div>
             <div class="row">
-                
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/habitat/globe.png" class="img-responsive img-circle blackborder" alt="">
+                        <img src="img/habitat/globe.png" class="img-responsive img-circle" alt="">
                         <h4>Found in India, China & South East Asia</h4>
                         <!-- <p class="text-muted">Lead Marketer</p> -->
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/habitat/tiger-jungle.jpg" class="img-responsive img-circle blackborder" alt="">
+                        <img src="img/habitat/tiger-jungle.jpg" class="img-responsive img-circle" alt="">
                         <h4>Prefers denser vegetation</h4>
                         <!-- <p class="text-muted">Lead Designer</p> -->
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/habitat/cave.jpg" class="img-responsive img-circle blackborder" alt="">
+                        <img src="img/habitat/cave.jpg" class="img-responsive img-circle" alt="">
                         <h4>Lives in Caves</h4>
                         <!-- <p class="text-muted">Lead Developer</p> -->
                     </div>
