Fix welcome message

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Penthera Tigris</div>
+                <div class="intro-lead-in">Welcome to Tiger's Den!</div>
                 <div class="intro-heading">Know about Tigers</div>
                 <!-- <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a> -->
             </div>
