--- a/index.html
+++ b/index.html
@@ -93,6 +93,16 @@
                 <div class="intro-lead-in">Welcome to Tiger's Den!</div>
                 <div class="intro-heading">Know about Tigers</div>
                 <!-- <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a> -->
+                <div class="col-sm-12 col-md-6 col-md-offset-3">
+                <form class="" role="search">
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search Term" name="q">
+            <div class="input-group-btn">
+                <button class="btn btn-primary" type="submit"><i class="glyphicon glyphicon-search"></i>&nbsp; Search</button>
+            </div>
+        </div>
+        </form>
+        </div>
             </div>
         </div>
     </header>
