--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="intro-lead-in">Welcome to Tiger's Den!</div>
                 <div class="intro-heading">Know about Tigers</div>
                 <!-- <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a> -->
-                <div class="col-sm-12 col-md-6 col-md-offset-3">
+                <!-- <div class="col-sm-12 col-md-6 col-md-offset-3">
                 <form class="" role="search">
         <div class="input-group">
             <input type="text" class="form-control" placeholder="Search Term" name="q">
@@ -102,7 +102,7 @@
             </div>
         </div>
         </form>
-        </div>
+        </div> -->
             </div>
         </div>
     </header>
@@ -225,19 +225,19 @@
                 </div>
                 <div class="text-center">
                 <!-- <a href="#" class="btn btn-xl"><i class="fa fa-plus-circle" aria-hidden="true"></i>&nbsp;Submit Image</a> -->
-                <div class="fileupload fileupload-new" data-provides="fileupload">
+                <!-- <div class="fileupload fileupload-new" data-provides="fileupload">
     <span class="btn btn-xl btn-file"><span class="fileupload-new"><i class="fa fa-plus-circle" aria-hidden="true"></i>&nbsp;Submit Image</span>
     <span class="fileupload-exists">Change</span>         <input type="file" /></span>
     <span class="fileupload-preview"></span>
     <a href="#" class="close fileupload-exists" data-dismiss="fileupload" style="float: none">×</a>
-  </div>
+  </div> -->
                 </div>
             </div>
         </div>
     </section>
 
     <!-- About Section -->
-    <section id="about">
+    <section id="about" class="bg-yellow">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -318,7 +318,7 @@
         </div>
     </section>
 
-        <section id="habitat">
+        <section id="habitat" class="bg-yellow">
 
                 <div class="container">
             <div class="row">
@@ -466,7 +466,7 @@
         </div>
     </section>
 
-        <section id="anatomy">
+        <section id="anatomy" class="bg-yellow">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -544,7 +544,46 @@
             </div>
         </div>
     </section>
-            <section id="culref">
+       <section id="comm" class="bg-yellow">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Communication</h2>
+                    <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/comm/1.png" class="img-responsive img-circle" alt="">
+                        <h4>Visual</h4>
+                        <!-- <p class="text-muted">Lead Designer</p> -->
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/comm/2.png" class="img-responsive img-circle" alt="">
+                        <h4>Vocal</h4>
+                        <!-- <p class="text-muted">Lead Marketer</p> -->
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/comm/3.png" class="img-responsive img-circle" alt="">
+                        <h4>Scent and Body Contact</h4>
+                        <!-- <p class="text-muted">Lead Developer</p> -->
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <p class="large text-muted">Tigers communicate visually using body language and body contact among themselves. They communicate with other species vocally by producing a loud roar.</p>
+
+                </div>
+            </div>
+        </div>
+    </section>
+            <section id="culref" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -594,7 +633,7 @@ In William Blake's poem in the Songs of Experience, titled "The Tyger," the tige
             </div>
         </div>
     </section>
-            <section id="facts" class="bg-light-gray">
+            <section id="facts" class="bg-yellow">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
